@@ -109,9 +109,17 @@
 <script type="text/html" id="navbar-bottom">
 <div class="navbar  navbar-inverse navbar-fixed-bottom">
 	<div class="container" id="e_footer">
-		<div style="display:inline-block; float:left;">&copy; e-NABLE 2014</div>
-		<span id="disclaimer" class="disclaimer btn btn-help" value='help' data-toggle="modal" data-target=".disclaimer-modal">
-		Terms of Use</span>
+		<div style="display:inline-block; float:left;">&copy; e-NABLE 2015</div>
+		&nbsp; &nbsp; &nbsp; | &nbsp; &nbsp;
+		<span id="disclaimer" class=" btn-help" value='help' style="cursor: pointer;"
+			data-toggle="modal" data-target=".disclaimer-modal"><span class="fa fa-shield"></span>
+			Terms of Use
+		</span>
+		&nbsp; &nbsp; | &nbsp; &nbsp;
+		<span id="issues" class=" btn-known-issues" value='known-issues' style="cursor: pointer;"
+			data-toggle="modal" data-target=".known-issues-modal"><span class="fa fa-exclamation-triangle"></span>
+			Known Issues
+		</span>
 	</div>
 </div>
 </script>
@@ -160,7 +168,7 @@
 				<h2 style="color:#999; text-align:center; margin:0">
 					Are you ready to select your model?
 				</h2>
-				<h4 style="text-align:center; color:#555;">Click the "Start" button to begin!</h4>
+				<h4 style="text-align:center; color:#555;">Click the "Start" button after accepting the terms to begin!</h4>
 				<br/><br/><br/><br/><br/>
 				<div data-bind="" style="padding: 15px; border-radius: 4px; background-color: rgb(221, 221, 221);text-align: center !important; font-size:16px !important;">
 				<h4><b>PLEASE CONFIRM</b></h4>
