@@ -119,6 +119,25 @@
     </div>
 </div>
 
+<div aria-hidden="false" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" class="known-issues-modal modal fade in" id="disclaimerModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <button aria-hidden="true" data-dismiss="modal" class="close" type="button"><i class="fa fa-times-circle"></i></button>
+          <h4 id="myModalLabel" class="modal-title">Known Issues</h4>
+        </div>
+        <div class="modal-body">
+          <iframe src="https://docs.google.com/document/d/1edMBzxeAljSZzxTYquekDUikI_gaTaQ4-hIoUY-_7e8/pub?embedded=true"
+            width="568px" height="470px"></iframe>
+        </div>
+        <div class="modal-footer">
+          <button data-dismiss="modal" class="btn btn-default" type="button">Close</button>
+        </div>
+
+      </div>
+    </div>
+</div>
 
 <div aria-hidden="false" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" class="disclaimer-modal modal fade in" id="disclaimerModal">
     <div class="modal-dialog">
